# Baseplate

./: .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  NOTES.md  README.md  recorder.py  setup.sh
micro/: platformio.ini
micro/src/: main.cpp
models/: .gitignore
models/meshes/rover/: joint1_box.stl  joint2L.stl  joint2R.stl  joint3.stl  joint4-diff.stl  link-fixed-230.stl  wheel.stl
models/rover/: README.md  differential.xacro  model.config  model.urdf  model.xacro  model.xarco
pkg/: .gitignore
pkg/brain/: CMakeLists.txt  package.xml  setup.py
pkg/brain/config/: rover_control.jsonnet  rover_control.yaml  simple_forward_wheel.yaml
pkg/brain/control/: communication.py  executors.py  finalizers.py  lifecycle.py  main.py  positioning.py  program.py  utils.py
pkg/brain/launch/: gazebo.launch  rviz.launch
pkg/brain/pybot/: communication.py  executors.py  lifecycle.py  main.py  positioning.py  run.py  stuff.py
pkg/brain/src/: ouroboros_pub.cpp  ouroboros_sub.cpp
scripts/: README.md  __init__.py  __main__.py  _base.sh
scripts/dev/: example.sh  init.sh
